tests/ui/trivial-bounds/trivial-bounds-leak-copy.stderr
error[E0507]: cannot move out of `*t` which is behind a shared reference
  --> $DIR/trivial-bounds-leak-copy.rs:13:5
   |
LL |     *t
   |     ^^ move occurs because `*t` has type `String`, which does not implement the `Copy` trait

warning: trait bound String: Copy does not depend on any type or lifetime parameters
  --> $DIR/trivial-bounds-leak-copy.rs:6:13
   |
LL |     String: Copy,
   |             ^^^^
   |
   = note: `#[warn(trivial_bounds)]` on by default

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0507`.
